package com.lvl6.proto;

option java_outer_classname = "JobProto";
//DO NOT USE ID AS THE NAME OF A PROPERTY IN ANY PROTO

//------------------------------------------------------------------------------------------

message BuildStructJobProto {
     optional int32 buildStructJobId = 1;
     optional int32 structId = 2;
     optional int32 quantityRequired = 3;
}

message MinimumUserBuildStructJobProto {
     optional int32 userId = 1;
     optional int32 questId = 2;
     optional int32 buildStructJobId = 3;
     optional int32 numOfStructUserHas = 4;
}

//------------------------------------------------------------------------------------------

message UpgradeStructJobProto {
     optional int32 upgradeStructJobId = 1;
     optional int32 structId = 2;
     optional int32 levelReq = 3;
}

message MinimumUserUpgradeStructJobProto {
     optional int32 userId = 1;
     optional int32 questId = 2;
     optional int32 upgradeStructJobId = 3;
     optional int32 currentLevel = 4;		//0 if not built
}

//------------------------------------------------------------------------------------------

message MinimumUserPossessEquipJobProto {
     optional int32 userId = 1;
     optional int32 questId = 2;
     optional int32 possessEquipJobId = 3;
     optional int32 numEquipUserHas = 4;
}

message PossessEquipJobProto {
     optional int32 possessEquipJobId = 1;
     optional int32 equipId = 2;
     optional int32 quantityReq = 3;
}

